Fix: Roundness of image, hover colors on button, 'Perfume' spacing and font size,weight

--- a/main.css
+++ b/main.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::selection {
+  /* Disables text highlighting */
+  color: none;
+  background: none;
+}
+*::-moz-selection {
+  /* For Mozilla Firefox */
+  color: none;
+  background: none;
+}
